# Elecrow-3.5-RGB-TFT-SQUARELINE-EXAMPLE

./: README.md  platformio.ini
include/: lv_conf.h
src/: CMakeLists.txt  filelist.txt  main.cpp
src/squareline/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/squareline/components/: ui_comp_hook.c
src/squareline/fonts/: ui_font_Verdana36.c  ui_font_Verdana48.c
src/squareline/images/: ui_img_blankpgbkgnd_png.c  ui_img_face10_png.c  ui_img_face11_png.c  ui_img_face12_png.c  ui_img_face1_png.c  ui_img_face2_png.c  ui_img_face3_png.c  ui_img_face4_png.c  ui_img_face5_png.c  ui_img_face6_png.c  ui_img_face7_png.c  ui_img_face8_png.c  ui_img_face9_png.c  ui_img_splashbkgnd2_png.c
src/squareline/screens/: ui_sldMainSlider.c
